# landsymm_py

./: .gitignore  README.md  forest_management_gross_transitions_inclusion_plan.md  landsymm_pipeline_technical_manual.md  pyproject.toml  session_handoff_20260126.md
hildaplus/: .gitignore  README.md  Readme_original.md  __init__.py  requirements.txt
hildaplus/config/: README.md  __init__.py  loader.py  lpjg_landcover_mapping.yaml
hildaplus/data_docs/: README.md
hildaplus/docs/: DMP.md  README.md  README_hildaplus-upscaling.md
hildaplus/reports/: README.md  diff_smoothing.txt  diff_upscaling.txt
hildaplus/scripts/: README.md  README_local_processing.md  run_chain.sh
landsymm/: __init__.py  config.py
landsymm/common/: README.md  __init__.py  aggregation.py  geoarray.py  gridlist.py  interpolation.py  io_utils.py  logging.py  lpjg_io.py  mapping_tools.py  validation.py
landsymm/harmonization/: README.md  __init__.py  plumharm.py  plumharm2lpjg.py  plumharm2lpjg_options.py  plumharm_area.py  plumharm_checks.py  plumharm_debug.py  plumharm_dist.py  plumharm_figs.py  plumharm_figs_options.py  plumharm_import_ref.py  plumharm_mgmt.py  plumharm_options.py  plumharm_pp_read_plum.py  plumharm_process_plum.py  plumharm_read_plum.py  plumharm_ring_redist.py  reformat_plum_gridded.py  run_plumharm.py  run_plumharm2lpjg.py  run_plumharm_figs.py  run_plumharm_pipeline.py
landsymm/remapping/: README.md  __init__.py  cropfrac.py  diagnostics.py  grid.py  interpolation.py  io.py  lu_import.py  nfert.py  rebuild_mirca_txt.py  remap.py  remap_options.py  run_remap.py  (+1 more)
(+29 files in other folders)
