[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landsymm"
version = "1.0.0"
description = "LandSyMM — Land System Modular Model Python pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "netCDF4>=1.6",
    "matplotlib>=3.7",
    "rasterio>=1.3",
    "xarray>=2023.1",
    "pandas>=2.0",
    "pyyaml>=6.0",     # for hildaplus/config (YAML-driven HILDA+→LPJ-GUESS mapping)
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["landsymm*"]
exclude = ["hildaplus*"]
